Update for node 19

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "Ismael Hamilton-El Aquil",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/translate": "^9.0.1",
     "discord.js": "14.18.0",
     "dotenv": "16.4.7",
     "minimist": "^1.2.8",
     "node-fetch": "^3.3.2"
+  },
+  "engines": {
+    "node": "19.x"
   }
 }
